--- a/index.html
+++ b/index.html
@@ -84,6 +84,17 @@
 
         </section>
 
+        <div class="popup">
+            
+            <div class="popup__container">
+                <img class="popup__close-icone" src="/images/Close Icon.png">
+                <h2 class="popup__title">Редактировать профиль</h2>
+                <input class="popup__name" type="text" name="firstname" placeholder="Жак-Ив Кусто">
+                <input class="popup__description" type="text" name="description" placeholder="Исследователь океана">
+                <input class="popup__submit-button" type="submit" value="Сохранить">
+            </div>
+        </div>
+
         <footer class="footer">
             <div class="footer__copyright">
                 <p>&copy; 2022 Mesto Russia</p>
