feat: сделать мобильную вёрстку и прикрутить скрипт popup

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <p class="profile__info-description">Исследователь океана</p>
                 </div>
                 
-                <img class="profile__add-button" src="/images/Add Button.png">
+                <p class="profile__add-button"> + </p>
 
             </div>
 
@@ -84,7 +84,7 @@
 
         </section>
 
-        <div class="popup">
+        <div class="popup popup_off">
             
             <div class="popup__container">
                 <img class="popup__close-icone" src="/images/Close Icon.png">
@@ -97,9 +97,10 @@
 
         <footer class="footer">
             <div class="footer__copyright">
-                <p>&copy; 2022 Mesto Russia</p>
+                <p style="margin: 0">&copy; 2022 Mesto Russia</p>
             </div>
         </footer>
     </div>
+    <script src="/scripts/script.js"></script>
 </body>
 </html>
