feat: сделать сценарий открытия, закрытия, сохранения текста в  popup

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 
                 <div class="profile__info">
                    <div class="profile__info-title">
-                        <h1 class="profile__info-name">Жак-Ив Кусто</h1>
+                        <h1 id="name" class="profile__info-name">Жак-Ив Кусто</h1>
                         <img class="profile__info-edit-button" src="/images/Edit Button.svg">  
                     </div>
-                    <p class="profile__info-description">Исследователь океана</p>
+                    <p id="description" class="profile__info-description">Исследователь океана</p>
                 </div>
                 
                 <p class="profile__add-button"> + </p>
