редактирование перед ревью

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="profile__info">
                    <div class="profile__info-title">
                         <h1 id="name" class="profile__info-name">Жак-Ив Кусто</h1>
-                        <img class="profile__info-edit-button" src="images/Edit Button.svg">  
+                        <img class="profile__info-edit-button" src="images/Edit_Button.svg" alt="кнопка редактировать">  
                     </div>
                     <p id="description" class="profile__info-description">Исследователь океана</p>
                 </div>
@@ -38,45 +38,45 @@
         <section>
             <div class="photo-grid">
                 <div class="photo-grid__item">
-                    <img class="photo-grid__card-image" src="images/card_example_1.jpg">
+                    <img class="photo-grid__card-image" src="images/card_example_1.jpg" alt="черногория">
                     <div class="photo-grid__card-description">
                         <h2 class="photo-grid__card-title">Черногория</h2>
-                        <img class="photo-grid__like-button" src="images/like-button.svg">
+                        <img class="photo-grid__like-button" src="images/like-button.svg" alt="like-button">
                     </div>
                 </div>
                 <div class="photo-grid__item">
-                    <img class="photo-grid__card-image" src="images/card/card_Capa Rocka.jpg">
+                    <img class="photo-grid__card-image" src="images/card/card_Capa_Rocka.jpg" alt="капа рока">
                     <div class="photo-grid__card-description">
                         <h2 class="photo-grid__card-title">Капа Рока</h2>
-                        <img class="photo-grid__like-button" src="images/like-button.svg">
+                        <img class="photo-grid__like-button" src="images/like-button.svg" alt="like-button">
                     </div>
                 </div>
                 <div class="photo-grid__item">
-                    <img class="photo-grid__card-image" src="images/card/card_elbrus.jpg">
+                    <img class="photo-grid__card-image" src="images/card/card_elbrus.jpg" alt="эльбрус">
                     <div class="photo-grid__card-description">
                         <h2 class="photo-grid__card-title">Эльбрус</h2>
-                        <img class="photo-grid__like-button" src="images/like-button.svg">
+                        <img class="photo-grid__like-button" src="images/like-button.svg" alt="like-button">
                     </div>
                 </div>
                 <div class="photo-grid__item">
-                    <img class="photo-grid__card-image" src="images/card/card_katynriver.jpg">
+                    <img class="photo-grid__card-image" src="images/card/card_katynriver.jpg" alt="катунь">
                     <div class="photo-grid__card-description">
                         <h2 class="photo-grid__card-title">Катунь</h2>
-                        <img class="photo-grid__like-button" src="images/like-button.svg">
+                        <img class="photo-grid__like-button" src="images/like-button.svg" alt="like-button">
                     </div>
                 </div>
                 <div class="photo-grid__item">
-                    <img class="photo-grid__card-image" src="images/card/card_chiketaman.jpg">
+                    <img class="photo-grid__card-image" src="images/card/card_chiketaman.jpg" alt="перевал чике-таман">
                     <div class="photo-grid__card-description">
                         <h2 class="photo-grid__card-title">Перевал Чике-Таман</h2>
-                        <img class="photo-grid__like-button" src="images/like-button.svg">
+                        <img class="photo-grid__like-button" src="images/like-button.svg" alt="like-button">
                     </div>
                 </div>
                 <div class="photo-grid__item">
-                    <img class="photo-grid__card-image" src="images/card/card_karellia.jpg">
+                    <img class="photo-grid__card-image" src="images/card/card_karellia.jpg" alt="карелия">
                     <div class="photo-grid__card-description">
                         <h2 class="photo-grid__card-title">Карелия</h2>
-                        <img class="photo-grid__like-button" src="images/like-button.svg">
+                        <img class="photo-grid__like-button" src="images/like-button.svg" alt="like-button">
                     </div>
                 </div>
                 
@@ -87,7 +87,7 @@
         <div class="popup popup_off">
             
             <div class="popup__container">
-                <img class="popup__close-icone" src="images/Close Icon.png">
+                <img class="popup__close-icone" src="images/Close_Icon.png" alt="закрыть окно">
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <input class="popup__name" type="text" name="firstname" placeholder="Жак-Ив Кусто">
                 <input class="popup__description" type="text" name="description" placeholder="Исследователь океана">
