редактирование перед ревью

--- a/index.html
+++ b/index.html
@@ -41,42 +41,42 @@
                     <img class="photo-grid__card-image" src="images/card_example_1.jpg" alt="черногория">
                     <div class="photo-grid__card-description">
                         <h2 class="photo-grid__card-title">Черногория</h2>
-                        <img class="photo-grid__like-button" src="images/like-button.svg" alt="like-button">
+                        <img class="photo-grid__like-button" src="images/like-button.svg" alt="нравится">
                     </div>
                 </div>
                 <div class="photo-grid__item">
                     <img class="photo-grid__card-image" src="images/card/card_Capa_Rocka.jpg" alt="капа рока">
                     <div class="photo-grid__card-description">
                         <h2 class="photo-grid__card-title">Капа Рока</h2>
-                        <img class="photo-grid__like-button" src="images/like-button.svg" alt="like-button">
+                        <img class="photo-grid__like-button" src="images/like-button.svg" alt="нравится">
                     </div>
                 </div>
                 <div class="photo-grid__item">
                     <img class="photo-grid__card-image" src="images/card/card_elbrus.jpg" alt="эльбрус">
                     <div class="photo-grid__card-description">
                         <h2 class="photo-grid__card-title">Эльбрус</h2>
-                        <img class="photo-grid__like-button" src="images/like-button.svg" alt="like-button">
+                        <img class="photo-grid__like-button" src="images/like-button.svg" alt="нравится">
                     </div>
                 </div>
                 <div class="photo-grid__item">
                     <img class="photo-grid__card-image" src="images/card/card_katynriver.jpg" alt="катунь">
                     <div class="photo-grid__card-description">
                         <h2 class="photo-grid__card-title">Катунь</h2>
-                        <img class="photo-grid__like-button" src="images/like-button.svg" alt="like-button">
+                        <img class="photo-grid__like-button" src="images/like-button.svg" alt="нравится">
                     </div>
                 </div>
                 <div class="photo-grid__item">
                     <img class="photo-grid__card-image" src="images/card/card_chiketaman.jpg" alt="перевал чике-таман">
                     <div class="photo-grid__card-description">
                         <h2 class="photo-grid__card-title">Перевал Чике-Таман</h2>
-                        <img class="photo-grid__like-button" src="images/like-button.svg" alt="like-button">
+                        <img class="photo-grid__like-button" src="images/like-button.svg" alt="нравится">
                     </div>
                 </div>
                 <div class="photo-grid__item">
                     <img class="photo-grid__card-image" src="images/card/card_karellia.jpg" alt="карелия">
                     <div class="photo-grid__card-description">
                         <h2 class="photo-grid__card-title">Карелия</h2>
-                        <img class="photo-grid__like-button" src="images/like-button.svg" alt="like-button">
+                        <img class="photo-grid__like-button" src="images/like-button.svg" alt="нравится">
                     </div>
                 </div>
                 
