--- a/index.html
+++ b/index.html
@@ -84,15 +84,14 @@
 
         </section>
 
-        <div class="popup popup_off">
-            
-            <div class="popup__container">
-                <img class="popup__close-icone" src="images/Close_Icon.png" alt="закрыть окно">
-                <h2 class="popup__title">Редактировать профиль</h2>
-                <input class="popup__name" type="text" name="firstname" placeholder="Жак-Ив Кусто">
-                <input class="popup__description" type="text" name="description" placeholder="Исследователь океана">
-                <input class="popup__submit-button" type="submit" value="Сохранить">
-            </div>
+        <div class="popup">
+                <form id="userInformation" class="popup__container">
+                  <img class="popup__close-icone" src="images/Close_Icon.png" alt="закрыть окно">
+                  <h2 class="popup__title">Редактировать профиль</h2>
+                  <input class="popup__name" type="text" name="firstname" placeholder="Жак-Ив Кусто">
+                  <input class="popup__description" type="text" name="description" placeholder="Исследователь океана">
+                  <button class="popup__submit-button" type="submit" value="Сохранить">Сохранить</button>
+                </form>
         </div>
 
         <footer class="footer">
