--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             <div class="profile__info">
               <div class="profile__info-title">
                 <h1 id="name" class="profile__info-name">Жак-Ив Кусто</h1>
-                <button class="profile__info-edit-button" type="menu"><img src="images/Edit_Button.svg" alt="кнопка редактировать"></button>
+                <button class="profile__info-edit-button" type="submit"><img src="images/Edit_Button.svg" alt="кнопка редактировать"></button>
               </div>
               <p id="description" class="profile__info-description">Исследователь океана</p>
             </div>
-            <button class="profile__add-button" type="menu"></button>
+            <button class="profile__add-button" type="submit"></button>
         </section>
 
         <section class="photo-grid">
@@ -74,7 +74,7 @@
 
         <div class="popup">
           <form id="userInformation" class="popup__container" name="form_1">
-            <button class="popup__close-icone" type="menu"><img src="images/Close_Icon.png" alt="закрыть окно"></button>
+            <button class="popup__close-icone" type="reset"><img src="images/Close_Icon.png" alt="закрыть окно"></button>
             <h2 class="popup__title">Редактировать профиль</h2>
             <input id="userName" class="popup__input" type="text" name="firstname" placeholder="Жак-Ив Кусто">
             <input id="userDescription" class="popup__input" type="text" name="description" placeholder="Исследователь океана">
