--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
         <div class="popup">
           <form id="userInformation" class="popup__container" name="form_1">
-            <button class="popup__close-icone" type="reset"><img src="images/Close_Icon.png" alt="закрыть окно"></button>
+            <button class="popup__close-icone" type="reset"><img src="images/Close_Icon.svg" alt="закрыть окно"></button>
             <h2 class="popup__title">Редактировать профиль</h2>
             <input id="userName" class="popup__input" type="text" name="firstname" placeholder="Жак-Ив Кусто">
             <input id="userDescription" class="popup__input" type="text" name="description" placeholder="Исследователь океана">
