--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             <div class="profile__info">
               <div class="profile__info-title">
                 <h1 id="name" class="profile__info-name">Жак-Ив Кусто</h1>
-                <button class="profile__info-edit-button" type="submit"><img src="images/Edit_Button.svg" alt="кнопка редактировать"></button>
+                <button class="profile__info-edit-button" type="button"><img src="images/Edit_Button.svg" alt="кнопка редактировать"></button>
               </div>
               <p id="description" class="profile__info-description">Исследователь океана</p>
             </div>
-            <button class="profile__add-button" type="submit"></button>
+            <button class="profile__add-button" type="button"></button>
         </section>
 
         <section class="photo-grid">
@@ -32,49 +32,49 @@
               <img class="photo-grid__card-image" src="images/card_example_1.jpg" alt="черногория">
               <div class="photo-grid__card-description">
                 <h2 class="photo-grid__card-title">Черногория</h2>
-                <button class="photo-grid__like-button" type="submit"><img src="images/like-button.svg" alt="нравится"></button>
+                <button class="photo-grid__like-button" type="button"><img src="images/like-button.svg" alt="нравится"></button>
               </div>
             </div>
             <div class="photo-grid__item">
               <img class="photo-grid__card-image" src="images/card/card_Capa_Rocka.jpg" alt="капа рока">
               <div class="photo-grid__card-description">
                 <h2 class="photo-grid__card-title">Капа Рока</h2>
-                <button class="photo-grid__like-button" type="submit"><img src="images/like-button.svg" alt="нравится"></button>
+                <button class="photo-grid__like-button" type="button"><img src="images/like-button.svg" alt="нравится"></button>
               </div>
             </div>
             <div class="photo-grid__item">
               <img class="photo-grid__card-image" src="images/card/card_elbrus.jpg" alt="эльбрус">
               <div class="photo-grid__card-description">
                 <h2 class="photo-grid__card-title">Эльбрус</h2>
-                <button class="photo-grid__like-button" type="submit"><img src="images/like-button.svg" alt="нравится"></button>
+                <button class="photo-grid__like-button" type="button"><img src="images/like-button.svg" alt="нравится"></button>
               </div>
             </div>
             <div class="photo-grid__item">
               <img class="photo-grid__card-image" src="images/card/card_katynriver.jpg" alt="катунь">
               <div class="photo-grid__card-description">
                 <h2 class="photo-grid__card-title">Катунь</h2>
-                <button class="photo-grid__like-button" type="submit"><img src="images/like-button.svg" alt="нравится"></button>
+                <button class="photo-grid__like-button" type="button"><img src="images/like-button.svg" alt="нравится"></button>
               </div>
             </div>
             <div class="photo-grid__item">
               <img class="photo-grid__card-image" src="images/card/card_chiketaman.jpg" alt="перевал чике-таман">
               <div class="photo-grid__card-description">
                 <h2 class="photo-grid__card-title">Перевал Чике-Таман</h2>
-                <button class="photo-grid__like-button" type="submit"><img src="images/like-button.svg" alt="нравится"></button>
+                <button class="photo-grid__like-button" type="button"><img src="images/like-button.svg" alt="нравится"></button>
               </div>
             </div>
             <div class="photo-grid__item">
               <img class="photo-grid__card-image" src="images/card/card_karellia.jpg" alt="карелия">
               <div class="photo-grid__card-description">
                 <h2 class="photo-grid__card-title">Карелия</h2>
-                <button class="photo-grid__like-button" type="submit"><img src="images/like-button.svg" alt="нравится"></button>
+                <button class="photo-grid__like-button" type="button"><img src="images/like-button.svg" alt="нравится"></button>
               </div>
             </div>
         </section>
 
         <div class="popup">
           <form id="userInformation" class="popup__container" name="form_1">
-            <button class="popup__close-icone" type="reset"><img src="images/Close_Icon.svg" alt="закрыть окно"></button>
+            <button class="popup__close-icone" type="button"><img src="images/Close_Icon.svg" alt="закрыть окно"></button>
             <h2 class="popup__title">Редактировать профиль</h2>
             <input id="userName" class="popup__input" type="text" name="firstname" placeholder="Жак-Ив Кусто">
             <input id="userDescription" class="popup__input" type="text" name="description" placeholder="Исследователь океана">
