Правки после четвертого  ревью

--- a/index.html
+++ b/index.html
@@ -10,82 +10,80 @@
 </head>
 <body>
   <div class="page">
-
     <header class="header">
         <img class="header__group-logo" src="images/logo.svg" alt="логотип сайта место">
     </header>
-<main>
-        <section class="profile">
-          <img class="profile__avatar" src="images/Avatar.jpg" alt="аватар автора блога">
-            <div class="profile__info">
-              <div class="profile__info-title">
-                <h1 id="name" class="profile__info-name">Жак-Ив Кусто</h1>
-                <button class="profile__info-edit-button" type="button"><img src="images/Edit_Button.svg" alt="кнопка редактировать"></button>
-              </div>
-              <p id="description" class="profile__info-description">Исследователь океана</p>
-            </div>
-            <button class="profile__add-button" type="button"></button>
-        </section>
-
-        <section class="photo-grid">
-            <div class="photo-grid__item">
-              <img class="photo-grid__card-image" src="images/card_example_1.jpg" alt="черногория">
-              <div class="photo-grid__card-description">
-                <h2 class="photo-grid__card-title">Черногория</h2>
-                <button class="photo-grid__like-button" type="button"><img src="images/like-button.svg" alt="нравится"></button>
-              </div>
-            </div>
-            <div class="photo-grid__item">
-              <img class="photo-grid__card-image" src="images/card/card_Capa_Rocka.jpg" alt="капа рока">
-              <div class="photo-grid__card-description">
-                <h2 class="photo-grid__card-title">Капа Рока</h2>
-                <button class="photo-grid__like-button" type="button"><img src="images/like-button.svg" alt="нравится"></button>
-              </div>
-            </div>
-            <div class="photo-grid__item">
-              <img class="photo-grid__card-image" src="images/card/card_elbrus.jpg" alt="эльбрус">
-              <div class="photo-grid__card-description">
-                <h2 class="photo-grid__card-title">Эльбрус</h2>
-                <button class="photo-grid__like-button" type="button"><img src="images/like-button.svg" alt="нравится"></button>
-              </div>
-            </div>
-            <div class="photo-grid__item">
-              <img class="photo-grid__card-image" src="images/card/card_katynriver.jpg" alt="катунь">
-              <div class="photo-grid__card-description">
-                <h2 class="photo-grid__card-title">Катунь</h2>
-                <button class="photo-grid__like-button" type="button"><img src="images/like-button.svg" alt="нравится"></button>
-              </div>
-            </div>
-            <div class="photo-grid__item">
-              <img class="photo-grid__card-image" src="images/card/card_chiketaman.jpg" alt="перевал чике-таман">
-              <div class="photo-grid__card-description">
-                <h2 class="photo-grid__card-title">Перевал Чике-Таман</h2>
-                <button class="photo-grid__like-button" type="button"><img src="images/like-button.svg" alt="нравится"></button>
-              </div>
-            </div>
-            <div class="photo-grid__item">
-              <img class="photo-grid__card-image" src="images/card/card_karellia.jpg" alt="карелия">
-              <div class="photo-grid__card-description">
-                <h2 class="photo-grid__card-title">Карелия</h2>
-                <button class="photo-grid__like-button" type="button"><img src="images/like-button.svg" alt="нравится"></button>
-              </div>
-            </div>
-        </section>
-
-        <div class="popup">
-          <form id="userInformation" class="popup__container" name="form_1">
-            <button class="popup__close-icone" type="button"><img src="images/Close_Icon.svg" alt="закрыть окно"></button>
+  <main>
+    <section class="profile">
+      <img class="profile__avatar" src="images/Avatar.jpg" alt="аватар автора блога">
+      <div class="profile__info">
+        <div class="profile__info-title">
+        <h1 id="name" class="profile__info-name">Жак-Ив Кусто</h1>
+        <button class="profile__info-edit-button" type="button"><img src="images/Edit_Button.svg" alt="кнопка редактировать"></button>
+        </div>
+      <p id="description" class="profile__info-description">Исследователь океана</p>
+      </div>
+      <button class="profile__add-button" type="button"></button>
+    </section>
+    <section class="photo-grid">
+      <div class="photo-grid__item">
+        <img class="photo-grid__card-image" src="images/card_example_1.jpg" alt="черногория">
+        <div class="photo-grid__card-description">
+          <h2 class="photo-grid__card-title">Черногория</h2>
+          <button class="photo-grid__like-button" type="button"><img src="images/like-button.svg" alt="нравится"></button>
+        </div>
+      </div>
+      <div class="photo-grid__item">
+        <img class="photo-grid__card-image" src="images/card/card_Capa_Rocka.jpg" alt="капа рока">
+        <div class="photo-grid__card-description">
+          <h2 class="photo-grid__card-title">Капа Рока</h2>
+          <button class="photo-grid__like-button" type="button"><img src="images/like-button.svg" alt="нравится"></button>
+        </div>
+      </div>
+      <div class="photo-grid__item">
+        <img class="photo-grid__card-image" src="images/card/card_elbrus.jpg" alt="эльбрус">
+        <div class="photo-grid__card-description">
+          <h2 class="photo-grid__card-title">Эльбрус</h2>
+          <button class="photo-grid__like-button" type="button"><img src="images/like-button.svg" alt="нравится"></button>
+        </div>
+      </div>
+      <div class="photo-grid__item">
+        <img class="photo-grid__card-image" src="images/card/card_katynriver.jpg" alt="катунь">
+        <div class="photo-grid__card-description">
+          <h2 class="photo-grid__card-title">Катунь</h2>
+          <button class="photo-grid__like-button" type="button"><img src="images/like-button.svg" alt="нравится"></button>
+        </div>
+      </div>
+      <div class="photo-grid__item">
+        <img class="photo-grid__card-image" src="images/card/card_chiketaman.jpg" alt="перевал чике-таман">
+        <div class="photo-grid__card-description">
+          <h2 class="photo-grid__card-title">Перевал Чике-Таман</h2>
+          <button class="photo-grid__like-button" type="button"><img src="images/like-button.svg" alt="нравится"></button>
+        </div>
+      </div>
+      <div class="photo-grid__item">
+        <img class="photo-grid__card-image" src="images/card/card_karellia.jpg" alt="карелия">
+        <div class="photo-grid__card-description">
+          <h2 class="photo-grid__card-title">Карелия</h2>
+          <button class="photo-grid__like-button" type="button"><img src="images/like-button.svg" alt="нравится"></button>
+        </div>
+      </div>
+    </section>
+      <div class="popup">
+        <div class="popup__container">
+          <form id="userInformation" name="form_1">
+            <button class="popup__close-icone" type="button"></button>
             <h2 class="popup__title">Редактировать профиль</h2>
             <input id="userName" class="popup__input" type="text" name="firstname" placeholder="Жак-Ив Кусто">
             <input id="userDescription" class="popup__input" type="text" name="description" placeholder="Исследователь океана">
             <button class="popup__submit-button" type="submit" value="Сохранить">Сохранить</button>
           </form>
         </div>
-</main>
-        <footer class="footer">
-          <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
-        </footer>
-    </div>
+      </div>
+    </main>
+  <footer class="footer">
+    <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
+  </footer>
   <script src="scripts/script.js"></script>
 </body>
 </html>
