Правки после четвертого  ревью

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="profile__info">
         <div class="profile__info-title">
         <h1 id="name" class="profile__info-name">Жак-Ив Кусто</h1>
-        <button class="profile__info-edit-button" type="button"><img src="images/Edit_Button.svg" alt="кнопка редактировать"></button>
+        <button class="profile__info-edit-button" type="button"></button>
         </div>
       <p id="description" class="profile__info-description">Исследователь океана</p>
       </div>
@@ -70,9 +70,9 @@
       </div>
     </section>
       <div class="popup">
+        <button class="popup__close-icone" type="button"></button>
         <div class="popup__container">
-          <form id="userInformation" name="form_1">
-            <button class="popup__close-icone" type="button"></button>
+          <form class="popup__container-form" id="userInformation" name="form_1">
             <h2 class="popup__title">Редактировать профиль</h2>
             <input id="userName" class="popup__input" type="text" name="firstname" placeholder="Жак-Ив Кусто">
             <input id="userDescription" class="popup__input" type="text" name="description" placeholder="Исследователь океана">
