--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
   <footer class="footer">
     <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
   </footer>
+  </div>
   <script src="scripts/script.js"></script>
 </body>
 </html>
