feat: добавить открыть\закрыть popup-place

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </form>
         </div>
       </div>
-      <div class="popup-place popup-place_on">
+      <div class="popup-place">
         <button class="popup-place__close-icone" type="button"></button>
         <div class="popup-place__container">
           <form class="popup-place__container-form" id="addUserCard" name="form_2">
@@ -96,6 +96,7 @@
             <button class="popup-place__submit-button" type="submit" value="Сохранить">Создать</button>
           </form>
         </div>
+      </div>
     </main>
   <footer class="footer">
     <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
