feat: добавить загрузку картинок из for eachфункция создания карточки

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <button class="photo-grid__card-delete" type="button" id="delete-button"><img src="images/Trash.svg" alt="удалить"></button>
         <div class="photo-grid__card-description">
           <h2 class="photo-grid__card-title"></h2>
-          <button class="photo-grid__like-button" type="button"><img src="images/like-button.svg" alt="нравится"></button>
+          <button class="photo-grid__like-button" type="button"></button>
         </div>
       </div>
       </template>
@@ -103,8 +103,8 @@
         <div class="popup-place__container">
           <form class="popup-place__container-form" id="addUserCard" name="form_2">
             <h2 class="popup-place__title">Новое место</h2>
-            <input id="userPlace" class="popup-place__input" type="text" name="user-place" placeholder="">
-            <input id="linkImage" class="popup-place__input" type="text" name="link-image" placeholder="">
+            <input id="userPlace" class="popup-place__input" type="text" name="user-place" placeholder="Название">
+            <input id="linkImage" class="popup-place__input" type="text" name="link-image" placeholder="Ссылка на картинку">
             <button class="popup-place__submit-button" type="submit" value="Сохранить">Создать</button>
           </form>
         </div>
