feat: создать вёрстку popup галлереи

--- a/index.html
+++ b/index.html
@@ -109,6 +109,14 @@
           </form>
         </div>
       </div>
+      <div class="popup-gallery">
+        <div class="popup-gallery__container">
+          <button class="popup-gallery__close-icone" type="button"></button>
+          <img class="popup-gallery__image" src="" alt="">
+          <p class="popup-gallery__description"></p>
+        </div>
+      </div>
+
     </main>
   <footer class="footer">
     <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
