feat: добавить анимацию для всех popup

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="photo-grid">
       <template id="placeCard">
       <div class="photo-grid__item">
-        <img class="photo-grid__card-image" src="" alt="">
+        <img class="photo-grid__card-image" src="url" alt=" ">
         <button class="photo-grid__card-delete" type="button" id="delete-button"><img src="images/Trash.svg" alt="удалить"></button>
         <div class="photo-grid__card-description">
           <h2 class="photo-grid__card-title"></h2>
@@ -112,7 +112,7 @@
       <div class="popup-gallery">
         <div class="popup-gallery__container">
           <button class="popup-gallery__close-icone" type="button"></button>
-          <img class="popup-gallery__image" src="" alt="">
+          <img class="popup-gallery__image" src="url" alt="">
           <p class="popup-gallery__description"></p>
         </div>
       </div>
