feat: универсальная функция отк-закр popup

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </form>
         </div>
       </div>
-      <div class="popup_place">
+      <div class="popup popup_place">
         <button class="popup_place-close-icone" type="button"></button>
         <div class="popup__container">
           <form class="popup_place-form" id="addUserCard" name="form_2">
@@ -60,7 +60,7 @@
           </form>
         </div>
       </div>
-      <div class="popup_gallery">
+      <div class="popup popup_gallery">
         <div class="popup_gallery-container">
           <button class="popup_gallery-close-icone" type="button"></button>
           <img class="popup_gallery-image" src="//:0" alt="">
