--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
   </footer>
   </div>
+  <script src="scripts/cards.js"></script>
   <script src="scripts/script.js"></script>
 </body>
 </html>
