refact: сделать блок popup по БЭМ

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
       </div>
       </template>
     </section>
-      <div class="popup popup_user">
-        <button class="popup_user-close-icone" type="button"></button>
+      <div class="popup popup__user">
+        <button class="popup__user_close-icone" type="button"></button>
         <div class="popup__container">
-          <form class="popup_user-form" name="form_1">
+          <form class="popup__user_form" name="form_1">
             <h2 class="popup__title">Редактировать профиль</h2>
-            <input class="popup_user_name-input" type="text" name="firstname" placeholder="Жак-Ив Кусто">
-            <input class="popup_user_description-input" type="text" name="description" placeholder="Исследователь океана">
+            <input class="popup__user_name-input" type="text" name="firstname" placeholder="Жак-Ив Кусто">
+            <input class="popup__user_description-input" type="text" name="description" placeholder="Исследователь океана">
             <button class="popup__submit-button popup__submit-button_active" type="submit" value="Сохранить">Сохранить</button>
           </form>
         </div>
